--- a/proyectopf/pubspec.yaml
+++ b/proyectopf/pubspec.yaml
@@ -52,3 +52,5 @@ flutter_launcher_icons:
 flutter:
 
   uses-material-design: true
+  assets:             # Aquí declaras tus imágenes
+    - assets/fondoP.png
