proceso de diseño e inmersion en la pagina de establecimientos

--- a/proyectopf/pubspec.yaml
+++ b/proyectopf/pubspec.yaml
@@ -54,3 +54,7 @@ flutter:
   uses-material-design: true
   assets:             # Aquí declaras tus imágenes
     - assets/fondoP.png
+    - assets/partyF.png
+    - assets/clubFiesta.jpg
+    - assets/laNoche.jpeg
+    - assets/vip.jpg
